typescript/checker/tests/errors/types/object-lit/index.ts.stderr
error: AssignFailed {
    span: Span {
        lo: BytePos(
            4,
        ),
        hi: BytePos(
            28,
        ),
        ctxt: #0,
    },
    left: TypeLit(
        TypeLit {
            span: Span {
                lo: BytePos(
                    7,
                ),
                hi: BytePos(
                    23,
                ),
                ctxt: #0,
            },
            members: [
                Property(
                    PropertySignature {
                        span: Span {
                            lo: BytePos(
                                9,
                            ),
                            hi: BytePos(
                                21,
                            ),
                            ctxt: #0,
                        },
                        readonly: false,
                        key: Ident(
                            Ident {
                                span: Span {
                                    lo: BytePos(
                                        9,
                                    ),
                                    hi: BytePos(
                                        13,
                                    ),
                                    ctxt: #0,
                                },
                                sym: Atom('name' type=inline),
                                type_ann: None,
                                optional: false,
                            },
                        ),
                        computed: false,
                        optional: false,
                        params: [],
                        type_ann: Some(
                            Keyword(
                                TsKeywordType {
                                    span: Span {
                                        lo: BytePos(
                                            15,
                                        ),
                                        hi: BytePos(
                                            21,
                                        ),
                                        ctxt: #0,
                                    },
                                    kind: TsStringKeyword,
                                },
                            ),
                        ),
                        type_params: None,
                    },
                ),
            ],
        },
    ),
    right: TypeLit(
        TypeLit {
            span: Span {
                lo: BytePos(
                    26,
                ),
                hi: BytePos(
                    28,
                ),
                ctxt: #0,
            },
            members: [],
        },
    ),
    cause: [
        MissingFields {
            span: Span {
                lo: BytePos(
                    4,
                ),
                hi: BytePos(
                    28,
                ),
                ctxt: #0,
            },
            fields: [
                Property(
                    PropertySignature {
                        span: Span {
                            lo: BytePos(
                                9,
                            ),
                            hi: BytePos(
                                21,
                            ),
                            ctxt: #0,
                        },
                        readonly: false,
                        key: Ident(
                            Ident {
                                span: Span {
                                    lo: BytePos(
                                        9,
                                    ),
                                    hi: BytePos(
                                        13,
                                    ),
                                    ctxt: #0,
                                },
                                sym: Atom('name' type=inline),
                                type_ann: None,
                                optional: false,
                            },
                        ),
                        computed: false,
                        optional: false,
                        params: [],
                        type_ann: Some(
                            Keyword(
                                TsKeywordType {
                                    span: Span {
                                        lo: BytePos(
                                            15,
                                        ),
                                        hi: BytePos(
                                            21,
                                        ),
                                        ctxt: #0,
                                    },
                                    kind: TsStringKeyword,
                                },
                            ),
                        ),
                        type_params: None,
                    },
                ),
            ],
        },
    ],
}
 --> $DIR/tests/errors/types/object-lit/index.ts:1:5
  |
1 | let a: { name: string } = {};
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

